--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div class="parent">
             <!-- <p id="nex">Make some farts</p> -->
             <div class="container">
-                <div class="box box-1">1</div>
+                <div class="box box-1 isOn">
+                    <kbd>1</kbd>
+                    <span class="sound"></span>
+                </div>
                 <div class="box box-2">2</div>
                 <div class="box box-3">3</div>
                 <div class="box box-4">4</div>
