--- a/index.html
+++ b/index.html
@@ -2,31 +2,28 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FartZart</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css" />
     </head>
 
     <body>
         <div class="parent">
             <!-- <p id="nex">Make some farts</p> -->
             <div class="container">
-                <div class="box box-1 isOn">
-                    1
-
-                </div>
-                <div class="box box-2">2</div>
-                <div class="box box-3">3</div>
-                <div class="box box-4">4</div>
-                <div class="box box-5">5</div>
-                <div class="box box-6">6</div>
-                <div class="box box-7">7</div>
-                <div class="box box-8">8</div>
-                <div class="box box-9">9</div>
-                <div class="box box-10">10</div>
-                <div class="box box-11">11</div>
-                <div class="box box-12">12</div>
+                <div data-key="49" class="box"><kbd>1</kbd></div>
+                <div data-key="50" class="box"><kbd>2</kbd></div>
+                <div data-key="51" class="box box-3"><kbd>3</kbd></div>
+                <div data-key="52" class="box box-4"><kbd>4</kbd></div>
+                <div data-key="53" class="box box-5"><kbd>5</kbd></div>
+                <div data-key="54" class="box box-6"><kbd>6</kbd></div>
+                <div data-key="55" class="box box-7"><kbd>7</kbd></div>
+                <div data-key="56" class="box box-8"><kbd>8</kbd></div>
+                <div data-key="57" class="box box-9"><kbd>9</kbd></div>
+                <div data-key="48" class="box box-0"><kbd>0</kbd></div>
+                <div data-key="189" class="box box-11"><kbd>-</kbd></div>
+                <div data-key="187" class="box box-12"><kbd>=</kbd></div>
             </div>
 
             <div class="subContainer">
@@ -40,6 +37,22 @@
                 <div class="play">PLAY</div>
             </div>
         </div>
+
+        <!-- linking the audios -->
+        <audio data-key="49" src="./sounds/fart-01.mp3"></audio>
+        <audio data-key="50" src="./sounds/fart-02.mp3"></audio>
+        <audio data-key="51" src="./sounds/fart-03.mp3"></audio>
+        <audio data-key="52" src="./sounds/fart-04.mp3"></audio>
+        <audio data-key="53" src="./sounds/fart-05.mp3"></audio>
+        <audio data-key="54" src="./sounds/fart-06.mp3"></audio>
+        <audio data-key="55" src="./sounds/fart-07.mp3"></audio>
+        <audio data-key="56" src="./sounds/fart-08.mp3"></audio>
+        <audio data-key="57" src="./sounds/fart-squeak-01.mp3"></audio>
+
+
+
+        <script src="keys.js"></script>
+        
     </body>
 
 </html>
