--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>nexZone</title>
+        <title>FartZart</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./style.css">
@@ -13,8 +13,9 @@
     <body>
         <div class="app">
             <header>
-                <h1>SoundTastik</h1>
-                <p>Make ez sounds</p>
+                <h1>FartZart</h1>
+                <p>Fart inside Trump's mouth</p>
+                <!-- <h3>Select the tiles to make some lit FARTS</h3> -->
                 <div class="nex">
                     <div class="img"></div>
                 </div>
@@ -23,11 +24,22 @@
             <div class="visual"></div>
             <!-- <h1>Visual</h1> -->
             <div class="container">
+                <!-- <div class="drums">
+                    <div class="kick">
+                        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+                    </div>
+                </div> -->
                 <div class="box pad1">
+                    <!-- <div><img src="../images/f2.png" class="innerImg" height=100%" width="50%" alt=""></div> -->
                     <audio class="sound" src="../sounds/fart-01.mp3"></audio>
+                    <!-- <p>me</p> -->
                 </div>
-                <div class="box pad2">
-                    <audio class="sound" src="../sounds/Mmm yeah!!Sound.mp3"></audio>
+                <div class="box pad2" onclick="nex()">
+                    <div>
+                        <!-- <div><img src="../images/1.png" class="innerImg" alt="" height=100%" width="50%" margin=""> -->
+                    </div>
+                    <audio class="sound" src="../sounds/fart-02.mp3"></audio>
+                    <!-- <audio class="sound" src="../sounds/d1.mp3"></audio> -->
                 </div>
                 <div class="box pad3">
                     <audio class="sound" src="../sounds/fart-03.mp3"></audio>
@@ -49,6 +61,9 @@
             </div>
         </div>
         <script src="app.js"></script>
+        <!-- tone js api -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.6.13/Tone.js"></script>
+        <script src="seq.js"></script>
     </body>
 
 </html>
