--- a/index.html
+++ b/index.html
@@ -2,57 +2,69 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FartZart</title>
-        <link rel="stylesheet" href="./style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <div class="parent">
-            <!-- <p id="nex">Make some farts</p> -->
+        <div class="app">
+            <header>
+                <h1>FartZart</h1>
+                <p>Fart inside Trump's mouth</p>
+                <!-- <h3>Select the tiles to make some lit FARTS</h3> -->
+                <div class="nex">
+                    <div class="img"></div>
+                </div>
+            </header>
+            <!-- here is where we place all the visual bubbles/shapes/etc -->
+            <div class="visual"></div>
+            <!-- <h1>Visual</h1> -->
             <div class="container">
-                <div data-key="49" class="box"><kbd>1</kbd></div>
-                <div data-key="50" class="box"><kbd>2</kbd></div>
-                <div data-key="51" class="box box-3"><kbd>3</kbd></div>
-                <div data-key="52" class="box box-4"><kbd>4</kbd></div>
-                <div data-key="53" class="box box-5"><kbd>5</kbd></div>
-                <div data-key="54" class="box box-6"><kbd>6</kbd></div>
-                <div data-key="55" class="box box-7"><kbd>7</kbd></div>
-                <div data-key="56" class="box box-8"><kbd>8</kbd></div>
-                <div data-key="57" class="box box-9"><kbd>9</kbd></div>
-                <div data-key="48" class="box box-0"><kbd>0</kbd></div>
-                <div data-key="189" class="box box-11"><kbd>-</kbd></div>
-                <div data-key="187" class="box box-12"><kbd>=</kbd></div>
-            </div>
 
-            <div class="subContainer">
-                <p id="six">Your Sequence</p>
-                <div class="cell cell-a">A</div>
-                <div class="cell cell-b">A</div>
-                <div class="cell cell-c">A</div>
-                <div class="cell cell-d">A</div>
-                <div class="cell cell-e">A</div>
-                <div class="cell cell-e">A</div>
-                <div class="play">PLAY</div>
+                <!-- <div class="drums">
+                    <div class="kick">
+                        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+                    </div>
+                </div> -->
+                <div class="box pad1">
+                    <!-- <div><img src="../images/f2.png" class="innerImg" height=100%" width="50%" alt=""></div> -->
+                    <audio class="sound" src="../sounds/fart-01.mp3"></audio>
+                    <!-- <p>me</p> -->
+                </div>
+                <div class="box pad2" onclick="nex()">
+                    <div>
+                        <!-- <div><img src="../images/1.png" class="innerImg" alt="" height=100%" width="50%" margin=""> -->
+                    </div>
+                    <audio class="sound" src="../sounds/fart-02.mp3"></audio>
+                    <!-- <audio class="sound" src="../sounds/d1.mp3"></audio> -->
+                </div>
+                <div class="box pad3">
+                    <audio class="sound" src="../sounds/fart-03.mp3"></audio>
+                </div>
+                <div class="box pad4">
+                    <audio class="sound" src="../sounds/fart-05.mp3"></audio>
+                </div>
+                <div class="box pad5">
+                    <audio class="sound" src="../sounds/fart-06.mp3"></audio>
+                </div>
+                <div class="box pad6"><audio class="sound" src="../sounds/fart-squeak-02.mp3"></audio>
+                </div>
+                <div class="box pad7"><audio class="sound" src="../sounds/fart-07.mp3"></audio>
+                </div>
+                <div class="box pad8"><audio class="sound" src="../sounds/fart-08.mp3"></audio>
+                </div>
+                <div class="box pad9"><audio class="sound" src="../sounds/fart-squeak-03.mp3"></audio>
+                </div>
             </div>
         </div>
-
-        <!-- linking the audios -->
-        <audio data-key="49" src="./sounds/fart-01.mp3"></audio>
-        <audio data-key="50" src="./sounds/fart-02.mp3"></audio>
-        <audio data-key="51" src="./sounds/fart-03.mp3"></audio>
-        <audio data-key="52" src="./sounds/fart-04.mp3"></audio>
-        <audio data-key="53" src="./sounds/fart-05.mp3"></audio>
-        <audio data-key="54" src="./sounds/fart-06.mp3"></audio>
-        <audio data-key="55" src="./sounds/fart-07.mp3"></audio>
-        <audio data-key="56" src="./sounds/fart-08.mp3"></audio>
-        <audio data-key="57" src="./sounds/fart-squeak-01.mp3"></audio>
-
-
-
-        <script src="keys.js"></script>
-        
+        <script src="app.js"></script>
+        <!-- tone js api -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.6.13/Tone.js"></script>
+        <script src="seq.js"></script>
     </body>
 
 </html>
