--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>FartZart</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <script src="./app.js"></script>
+        <script src="app.js"></script>
         <!-- tone js api -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.6.13/Tone.js"></script>
         <script src="seq.js"></script>
